--- a/projects.html
+++ b/projects.html
@@ -51,12 +51,14 @@
             <li class="site-header-linkedin">
               <a
                 href="https://www.linkedin.com/in/lauriane-letheux-communication/"
+                target="_blank"
                 title="LinkedIn Lauriane Letheux"
               ></a>
             </li>
             <li class="site-header-behance">
               <a
                 href="https://www.behance.net/laurianeletheux"
+                target="_blank"
                 title="Behance Lauriane Letheux"
               ></a>
             </li>
@@ -91,9 +93,7 @@
           <div></div>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-linkedin-responsive
-          "
+          class="site-header-menu-item-responsive site-header-linkedin-responsive"
         >
           <a
             href="https://www.linkedin.com/in/lauriane-letheux-communication/"
@@ -102,9 +102,7 @@
           ></a>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-behance-responsive
-          "
+          class="site-header-menu-item-responsive site-header-behance-responsive"
         >
           <a
             href="https://www.behance.net/laurianeletheux"
@@ -150,7 +148,7 @@ IMAGE GRILLE -->
             src="img/infographie-celar.jpg"
             alt="Infographie de présentation de l'association"
           />
-          <span class="image-item-number">02</span>
+          <span class="image-item-number">03</span>
           <span class="image-item-link">
             <span>Infographie de présentation</span>
             <div class="icon-right-arrow"></div>
@@ -161,7 +159,7 @@ IMAGE GRILLE -->
           href="./projet-3.html"
         >
           <img src="img/plan_bureaux.jpg" alt="Plan de bureaux" />
-          <span class="image-item-number">03</span>
+          <span class="image-item-number">05</span>
           <span class="image-item-link">
             <span>Flex office</span>
             <div class="icon-right-arrow"></div>
@@ -175,7 +173,7 @@ IMAGE GRILLE -->
             src="img/sport-posters.jpg"
             alt="Affiches d'événements sportifs"
           />
-          <span class="image-item-number">04</span>
+          <span class="image-item-number">07</span>
           <span class="image-item-link">
             <span>Affiches</span>
             <div class="icon-right-arrow"></div>
@@ -186,7 +184,7 @@ IMAGE GRILLE -->
           href="./projet-5.html"
         >
           <img src="img/logotheque.jpg" alt="Logotype data" />
-          <span class="image-item-number">05</span>
+          <span class="image-item-number">09</span>
           <span class="image-item-link">
             <span>Logotype</span>
             <div class="icon-right-arrow"></div>
@@ -197,7 +195,7 @@ IMAGE GRILLE -->
           href="./projet-6.html"
         >
           <img src="img/projets_perso.jpg" alt="Affiches humoristiques" />
-          <span class="image-item-number">06</span>
+          <span class="image-item-number">11</span>
           <span class="image-item-link">
             <span>Illustrations humoristiques</span>
             <div class="icon-right-arrow"></div>
@@ -208,7 +206,7 @@ IMAGE GRILLE -->
           href="./projet-7.html"
         >
           <img src="img/video.jpg" alt="Vidéo en 3D" />
-          <span class="image-item-number">07</span>
+          <span class="image-item-number">13</span>
           <span class="image-item-link">
             <span>Projets 3D</span>
             <div class="icon-right-arrow"></div>
@@ -219,7 +217,7 @@ IMAGE GRILLE -->
           href="./projet-8.html"
         >
           <img src="img/motion-main.jpg" alt="Vidéo en 3D" />
-          <span class="image-item-number">08</span>
+          <span class="image-item-number">15</span>
           <span class="image-item-link">
             <span>Motion design</span>
             <div class="icon-right-arrow"></div>
@@ -235,7 +233,7 @@ IMAGE GRILLE -->
             src="img/guide-com-projets.jpg"
             alt="Livret sur la communication"
           />
-          <span class="image-item-number">09</span>
+          <span class="image-item-number">02</span>
           <span class="image-item-link">
             <span>Livret communication</span>
             <div class="icon-right-arrow"></div>
@@ -246,7 +244,7 @@ IMAGE GRILLE -->
           href="./projet-10.html"
         >
           <img src="img/cyber.jpg" alt="Risques cybersécurité" />
-          <span class="image-item-number">10</span>
+          <span class="image-item-number">04</span>
           <span class="image-item-link">
             <span>Infographie cybersécurité</span>
             <div class="icon-right-arrow"></div>
@@ -257,9 +255,9 @@ IMAGE GRILLE -->
           href="./projet-11.html"
         >
           <img src="img/infographies.jpg" alt="Van" />
-          <span class="image-item-number">11</span>
+          <span class="image-item-number">06</span>
           <span class="image-item-link">
-            <span>infographie rétrospective</span>
+            <span>Infographie rétrospective</span>
             <div class="icon-right-arrow"></div>
           </span>
         </a>
@@ -268,7 +266,7 @@ IMAGE GRILLE -->
           href="./projet-12.html"
         >
           <img src="img/beertorture.jpg" alt="Beer torture" />
-          <span class="image-item-number">12</span>
+          <span class="image-item-number">08</span>
           <span class="image-item-link">
             <span>Beer torture</span>
             <div class="icon-right-arrow"></div>
@@ -279,7 +277,7 @@ IMAGE GRILLE -->
           href="./projet-13.html"
         >
           <img src="img/4-assiettes-pres.jpg" alt="site web 4 assiettes" />
-          <span class="image-item-number">13</span>
+          <span class="image-item-number">10</span>
           <span class="image-item-link">
             <span>4 assiettes</span>
             <div class="icon-right-arrow"></div>
@@ -290,7 +288,7 @@ IMAGE GRILLE -->
           href="./projet-14.html"
         >
           <img src="img/star-main.jpg" alt="Design app star metro" />
-          <span class="image-item-number">14</span>
+          <span class="image-item-number">12</span>
           <span class="image-item-link">
             <span>Application STAR</span>
             <div class="icon-right-arrow"></div>
@@ -301,7 +299,7 @@ IMAGE GRILLE -->
           href="./projet-15.html"
         >
           <img src="img/o-theatre.jpg" alt="Site web Ô Théâtre" />
-          <span class="image-item-number">15</span>
+          <span class="image-item-number">14</span>
           <span class="image-item-link">
             <span>Ô Théâtre</span>
             <div class="icon-right-arrow"></div>
@@ -337,7 +335,7 @@ IMAGE GRILLE -->
       <div class="footer-underline"></div>
       <ul class="footer-bottom">
         <li class="footer-item">
-          <a class="footer-bottom-item">© 2021 par Lauriane Letheux</a>
+          <a class="footer-bottom-item">© 2022 par Lauriane Letheux</a>
         </li>
         <li class="footer-item">
           <a class="footer-bottom-item" href="./portfolio.html" target="_blank"
