--- a/projet-4.html
+++ b/projet-4.html
@@ -51,12 +51,14 @@
             <li class="site-header-linkedin">
               <a
                 href="https://www.linkedin.com/in/lauriane-letheux-communication/"
+                target="_blank"
                 title="LinkedIn Lauriane Letheux"
               ></a>
             </li>
             <li class="site-header-behance">
               <a
                 href="https://www.behance.net/laurianeletheux"
+                target="_blank"
                 title="Behance Lauriane Letheux"
               ></a>
             </li>
@@ -91,9 +93,7 @@
           <div></div>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-linkedin-responsive
-          "
+          class="site-header-menu-item-responsive site-header-linkedin-responsive"
         >
           <a
             href="https://www.linkedin.com/in/lauriane-letheux-communication/"
@@ -102,9 +102,7 @@
           ></a>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-behance-responsive
-          "
+          class="site-header-menu-item-responsive site-header-behance-responsive"
         >
           <a
             href="https://www.behance.net/laurianeletheux"
@@ -149,6 +147,7 @@
         </p>
       </div>
     </div>
+    <div class="whitespace-small"></div>
 
     <!-- 
     _________________
@@ -196,7 +195,7 @@
       <div class="footer-underline"></div>
       <ul class="footer-bottom">
         <li class="footer-item">
-          <a class="footer-bottom-item">© 2021 par Lauriane Letheux</a>
+          <a class="footer-bottom-item">© 2022 par Lauriane Letheux</a>
         </li>
         <li class="footer-item">
           <a class="footer-bottom-item" href="./portfolio.html" target="_blank"
