--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,7 @@
           <div></div>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-linkedin-responsive
-          "
+          class="site-header-menu-item-responsive site-header-linkedin-responsive"
         >
           <a
             href="https://www.linkedin.com/in/lauriane-letheux-communication/"
@@ -101,9 +99,7 @@
           ></a>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-behance-responsive
-          "
+          class="site-header-menu-item-responsive site-header-behance-responsive"
         >
           <a
             href="https://www.behance.net/laurianeletheux"
@@ -143,7 +139,7 @@
       <div class="footer-underline"></div>
       <ul class="footer-bottom">
         <li class="footer-item">
-          <a class="footer-bottom-item">© 2021 par Lauriane Letheux</a>
+          <a class="footer-bottom-item">© 2022 par Lauriane Letheux</a>
         </li>
         <li class="footer-item">
           <a class="footer-bottom-item" href="./portfolio.html" target="_blank"
