--- a/projet-1.html
+++ b/projet-1.html
@@ -47,12 +47,14 @@
             <li class="site-header-linkedin">
               <a
                 href="https://www.linkedin.com/in/lauriane-letheux-communication/"
+                target="_blank"
                 title="LinkedIn Lauriane Letheux"
               ></a>
             </li>
             <li class="site-header-behance">
               <a
                 href="https://www.behance.net/laurianeletheux"
+                target="_blank"
                 title="Behance Lauriane Letheux"
               ></a>
             </li>
@@ -87,9 +89,7 @@
           <div></div>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-linkedin-responsive
-          "
+          class="site-header-menu-item-responsive site-header-linkedin-responsive"
         >
           <a
             href="https://www.linkedin.com/in/lauriane-letheux-communication/"
@@ -98,9 +98,7 @@
           ></a>
         </li>
         <li
-          class="
-            site-header-menu-item-responsive site-header-behance-responsive
-          "
+          class="site-header-menu-item-responsive site-header-behance-responsive"
         >
           <a
             href="https://www.behance.net/laurianeletheux"
@@ -174,37 +172,40 @@
         </div>
       </div>
     </div>
-
+    <div class="whitespace-small"></div>
     <!-- 
     _________________
     FLÈCHE RETOUR -->
-    <div class="wrapper">
-      <svg
-        width="18px"
-        height="17px"
-        viewBox="0 0 18 17"
-        version="1.1"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
-      >
-        <g
-          id="prev"
-          transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)"
+
+    <a href="./projects.html">
+      <div class="wrapper">
+        <svg
+          width="18px"
+          height="17px"
+          viewBox="0 0 18 17"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
         >
-          <polygon
-            class="arrow"
-            points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"
-          ></polygon>
-          <polygon
-            class="arrow-fixed"
-            points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"
-          ></polygon>
-          <path
-            d="M-1.48029737e-15,0.56157424 L-1.48029737e-15,16.1929159 L9.708,8.33860465 L-2.66453526e-15,0.56157424 L-1.48029737e-15,0.56157424 Z M1.33333333,3.30246869 L7.62533333,8.34246869 L1.33333333,13.4327013 L1.33333333,3.30246869 L1.33333333,3.30246869 Z"
-          ></path>
-        </g>
-      </svg>
-    </div>
+          <g
+            id="prev"
+            transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)"
+          >
+            <polygon
+              class="arrow"
+              points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"
+            ></polygon>
+            <polygon
+              class="arrow-fixed"
+              points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"
+            ></polygon>
+            <path
+              d="M-1.48029737e-15,0.56157424 L-1.48029737e-15,16.1929159 L9.708,8.33860465 L-2.66453526e-15,0.56157424 L-1.48029737e-15,0.56157424 Z M1.33333333,3.30246869 L7.62533333,8.34246869 L1.33333333,13.4327013 L1.33333333,3.30246869 L1.33333333,3.30246869 Z"
+            ></path>
+          </g>
+        </svg>
+      </div>
+    </a>
 
     <!-- 
     _________________
@@ -218,7 +219,7 @@
       <div class="footer-underline"></div>
       <ul class="footer-bottom">
         <li class="footer-item">
-          <a class="footer-bottom-item">© 2021 par Lauriane Letheux</a>
+          <a class="footer-bottom-item">© 2022 par Lauriane Letheux</a>
         </li>
         <li class="footer-item">
           <a class="footer-bottom-item" href="./portfolio.html" target="_blank"
